# libfoxochat

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: foxogram_lib-config.cmake.in  libfoxochat-config.cmake.in  libfoxogram-config.cmake.in  utils.cmake
include/foxochat/: Attachment.h  BaseEntity.h  Cache.h  Channel.h  Enums.h  EventTypes.h  Events.h  Gateway.h  HttpClient.h  Logger.h  Me.h  Member.h  Message.h  Serializer.h  User.h  Utils.h  exceptions.h  export.h
include/foxogram/: Attachment.h  Auth.h  BaseEntity.h  BaseUser.h  Cache.h  Channel.h  Enums.h  EventTypes.h  Events.h  Gateway.h  HttpClient.h  Logger.h  Me.h  Member.h  Message.h  Proxy.h  Serializer.h  User.h  Utils.h  exceptions.h  export.h
include/nlohmann/: json.hpp  json_fwd.hpp
src/: Attachment.cpp  BaseUser.cpp  Channel.cpp  EventTypes.cpp  Gateway.cpp  HttpClient.cpp  Logger.cpp  Me.cpp  Member.cpp  Message.cpp  Proxy.cpp  Serializer.cpp  User.cpp  Utils.cpp
src/Events/: ChannelCreate.cpp  ChannelDelete.cpp  ChannelUpdate.cpp  Hello.cpp  MemberAdd.cpp  MemberRemove.cpp  MemberUpdate.cpp  MessageCreate.cpp  MessageDelete.cpp  MessageUpdate.cpp  Pong.cpp
tests/: CMakeLists.txt  main.cpp
